# pico-lib-ntp-sync

./: CMakeLists.txt  README.md
include/: pico_ntp_sync.hpp
src/: pico_ntp_sync.cpp
